# whisper

./: .gitignore  README.md  build.py  start-package.py
app/: Cargo.toml
app/src/: index.css  index.html  index.js  index2.js  lib.rs  viz.js
nn/: Cargo.toml
nn/src/: audio.rs  lib.rs
pkg/: manifest.json  metadata.json
