[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
candle = { path = "../../candle/candle-core", version = "0.3.0", package = "candle-core" }
candle-nn = { path = "../../candle/candle-nn", version = "0.3.0" }
candle-transformers = { path = "../../candle/candle-transformers", version = "0.3.0" }
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }
num-traits = "0.2.15"
rand = "0.8.5"
safetensors = "0.3.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.13.4", default-features = false, features = ["unstable_wasm"] }
wav = "1.0.0"
wit-bindgen = { version = "0.11.0", default_features = false }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:uq-process"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
